--- a/public/assets/css/insta.css
+++ b/public/assets/css/insta.css
@@ -23,7 +23,7 @@
     justify-content: space-between;
     align-content: space-between;
     justify-items: end;
-    align-items: baseline;
+    align-items: flex-start;
 }
 
 .left-col {
@@ -145,7 +145,7 @@ span.top {
     height: auto;
     background: #fff;
     border: 1px solid #dfdfdf;
-    margin-top: 40px;
+    /* margin-top: 40px; */
     border-radius: 6px;
 }
 
@@ -189,7 +189,7 @@ span.top {
 
 .post-image {
     width: 100%;
-    height: 500px;
+    height: 504px;
     object-fit: cover;
 }
 
@@ -395,9 +395,9 @@ span.speace {
     position: relative;
     width: calc(100% - 2px);
     border-radius: 3px;
-    border: 1px solid #dbdbdb;
+    /* border: 1px solid #dbdbdb; */
     align-items: stretch;
-    background-color: #fff;
+    /* background-color: #fff; */
     flex: 0 0 auto;
     flex-flow: row nowrap;
     font: normal normal 400 normal 14px/18px -apple-system, system-ui,
@@ -414,7 +414,7 @@ span.speace {
     flex: 0 0 auto;
 }
 .social-right-col .social-name {
-    color: #262626;
+    /* color: #262626; */
     text-decoration: none solid #262626;
     text-size-adjust: 100%;
     font-weight: 600;
@@ -439,13 +439,13 @@ span.speace {
     height: 34px;
     left: 0px;
     position: relative;
-    width: 34px;
+    /* width: 34px; */
     border: 0px none #003569;
     border-radius: 50% 50% 50% 50%;
     flex: 0 0 auto;
     outline: #003569 none 0px;
     overflow: hidden;
-    margin: 0 18px 0 0;
+    margin: 0 10px 0 0;
 }
 .social-right-col .social-header .social-profile-img img {
     cursor: pointer;
@@ -632,4 +632,27 @@ input[type="number"]::-webkit-outer-spin-button {
     -moz-appearance: none;
     appearance: none;
     margin: 0;
+}
+/* ############################ */
+/* scroller */
+/* ############################ */
+/* Style the scrollbar */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f5f5f5;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #9b9b9b;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
