--- a/public/assets/css/insta.css
+++ b/public/assets/css/insta.css
@@ -658,3 +658,11 @@ input[type="number"]::-webkit-outer-spin-button {
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+/* like btn convert */
+.liked {
+    color: red;
+}
+.liked i {
+    color: red;
+}
