--- a/public/assets/css/insta.css
+++ b/public/assets/css/insta.css
@@ -666,3 +666,21 @@ input[type="number"]::-webkit-outer-spin-button {
 .liked i {
     color: red;
 }
+/* ######################################## */
+/* heart */
+/* ######################################## */
+.heart {
+    width: 100px;
+    height: 100px;
+    background: url("https://cssanimation.rocks/images/posts/steps/heart.png")
+        no-repeat;
+    background-position: 0 0;
+    cursor: pointer;
+    transition: background-position 1s steps(28);
+    transition-duration: 0s;
+}
+.heart.is-active {
+    transition-duration: 1s;
+    background-position: -2800px 0;
+}
+
